# AnIMaL

./: .gitignore  CMakeLists.txt  README.md
data/: linear_regression.csv  polynomial_regression.csv
examples/: animal_shell.cpp  bayes_examples.cpp  correlation_covariance.cpp  linear_regression.cpp  multiclass.cpp  polynomial_regression.cpp  statistics_basics.cpp  xor.cpp
include/animal/: bayes.hpp  dataset.hpp  layers.hpp  losses.hpp  matrix.hpp  metrics.hpp  regression.hpp  sequential.hpp  statistics.hpp
src/: bayes.cpp  dataset.cpp  metrics.cpp  regression.cpp  sequential.cpp  statistics.cpp
tests/: test_bayes.cpp  test_common.hpp  test_dataset.cpp  test_losses_layers.cpp  test_main.cpp  test_matrix.cpp  test_metrics.cpp  test_registry.hpp  test_regression.cpp  test_statistics.cpp
